--- a/views/partials/mapfunctions.handlebars
+++ b/views/partials/mapfunctions.handlebars
@@ -24,11 +24,25 @@
     var service;
     var louisville = { lat: 38.252259, lng: -85.756534 };
     var userLocation;
+    var userMarker;
     //this function initiates the map
     function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
             center: { lat: 38.252259, lng: -85.756534 },
-            zoom: 14
+            zoom: 14,
+            gestureHandling: 'cooperative'
+        });
+
+
+        var geocoder = new google.maps.Geocoder;
+        geocoder.geocode({ 'address': 'Louisville' }, function (results, status) {
+            if (status === 'OK') {
+                map.setCenter(results[0].geometry.location);
+
+            } else {
+                window.alert('Geocode was not successful for the following reason: ' +
+                    status);
+            }
         });
         //use locations array as the users saved favorite places
         var locations = [
@@ -101,13 +115,16 @@
             hideSearchMarker();
         });
 
+        document.getElementById('clear-location').addEventListener('click', function () {
+            hideLocation();
+        });
+
         document.getElementById('submit-location').addEventListener('click', function () {
             setUserLocation();
         });
 
-        placesSearchBox.addListener('places_changed', function () {
-            searchBoxPlaces(this);
-        });
+
+        document.getElementById('place-search').addEventListener('click', placeSearch);
 
 
         var timeAutocomplete = new google.maps.places.Autocomplete(
@@ -119,11 +136,13 @@
         var currentLocationAutocomplete = new google.maps.places.Autocomplete(
             document.getElementById('currentLocation'));
 
-        var placesSearchBox = new google.maps.places.SearchBox(
+        var searchBox = new google.maps.places.SearchBox(
             document.getElementById('place-search-text'));
 
-
-        placesSearchBox.setBounds(map.getBounds());
+        searchBox.addListener('places_changed', function () {
+            searchBoxPlaces(this);
+        });
+        searchBox.setBounds(map.getBounds());
         zoomAutocomplete.bindTo('bounds', map);
         timeAutocomplete.bindTo('bounds', map);
         currentLocationAutocomplete.bindTo('bounds', map);
@@ -148,10 +167,42 @@
         });
     }
 
-
+    
     function setUserLocation() {
+      var meIcon = makeMarkerIcon('0091ff');  
         userLocation = document.getElementById('currentLocation').value
+        var userLabel = "Me";
         console.log(userLocation);
+        var geocoder = new google.maps.Geocoder;
+        geocoder.geocode({ 'address': userLocation }, function (results, status) {
+            if (status === 'OK') {
+                map.setCenter(results[0].geometry.location);
+                userMarker = new google.maps.Marker({
+                    map: map,
+                    position: results[0].geometry.location,
+                    draggable: true,
+                    animation: google.maps.Animation.DROP,
+                    label: userLabel,
+                    
+                    icon: meIcon,
+
+                });
+            } else {
+                window.alert('Geocode was not successful for the following reason: ' +
+                    status);
+            }
+        });
+    }
+
+    function makeMarkerIcon(markerColor) {
+        var markerImage = new google.maps.MarkerImage(
+            'http://chart.googleapis.com/chart?chst=d_map_spin&chld=1.15|0|' + markerColor +
+            '|40|_|%E2%80%A2',
+            new google.maps.Size(21, 34),
+            new google.maps.Point(0, 0),
+            new google.maps.Point(10, 34),
+            new google.maps.Size(21, 34));
+        return markerImage;
     }
 
     //this function populates the info window when marker is clicked based on position of marker
@@ -165,50 +216,7 @@
                 infowindow.marker(null);
             });
 
-            function getPlacesDetails(marker, infowindow) {
 
-                var service = new google.maps.places.PlacesService(map);
-                service.getDetails({
-                    placeId: marker.id
-                }, function (place, status) {
-                    if (status === google.maps.places.PlacesServiceStatus.OK) {
-                        // Set the marker property on this infowindow so it isn't created again.
-                        infowindow.marker = marker;
-                        var innerHTML = '<div>';
-                        if (place.name) {
-                            innerHTML += '<strong>' + place.name + '</strong>';
-                        }
-                        if (place.formatted_address) {
-                            innerHTML += '<br>' + place.formatted_address;
-                        }
-                        if (place.formatted_phone_number) {
-                            innerHTML += place.formatted_phone_number;
-                        }
-                        if (place.opening_hours) {
-                            innerHTML += '<br><br><strong>Hours:</strong><br>' +
-                                place.opening_hours.weekday_text[0] + '<br>' +
-                                place.opening_hours.weekday_text[1] + '<br>' +
-                                place.opening_hours.weekday_text[2] + '<br>' +
-                                place.opening_hours.weekday_text[3] + '<br>' +
-                                place.opening_hours.weekday_text[4] + '<br>' +
-                                place.opening_hours.weekday_text[5] + '<br>' +
-                                place.opening_hours.weekday_text[6];
-                        }
-                        if (place.photos) {
-                            innerHTML += '<br><br><img src="' + place.photos[0].getUrl(
-                                { maxHeight: 500, maxWidth: 600 }) + '">';
-                        }
-                        innerHTML += '<div>';
-                        infoWindow.setContent(innerHTML);
-                        infoWindow.open(map.marker);
-                        //MAke suWe the marker property is cleared if the infowindow is closed.
-                        infoWindow.addListener('closeclick', function () {
-                            infoWindow.marker = null;
-                        });
-
-                    }
-                })
-            }
 
             var streetViewService = new google.maps.StreetViewService();
             var radius = 50;
@@ -229,7 +237,7 @@
                         markerDisplayDirections();
                     });
                     document.getElementById('view-details').addEventListener('click', function () {
-                        getPlacesDetails(this, infowindow);
+                        getPlacesDetails(this);
                     });
                     var panoramaOptions = {
                         position: nearStreetViewLocation,
@@ -267,14 +275,22 @@
     function hideListings() {
         for (var i = 0; i < favmarkers.length; i++) {
             favmarkers[i].setMap(null);
-            zoomHome();
+            
         }
+        zoomHome();
     }
 
-    function hideOnly() {
-        for (var i = 0; i < favmarkers.length; i++) {
-            favmarkers[i].setMap(null);
+    function hideSearchListings() {
+        for (var i = 0; i < searchmarkers.length; i++) {
+            searchmarkers[i].setMap(null);
+            
         }
+       zoomHome(); 
+    }
+
+    function hideLocation() {
+        userMarker.setMap(null);
+        zoomHome();
     }
 
     function toggleDrawing(drawingManager) {
@@ -336,16 +352,16 @@
     function searchWithinTime() {
         //Init the distance Matrix service.
         var distanceMatrixService = new google.maps.DistanceMatrixService;
-        var address = document.getElementById('search-within-time-text').value;
+        var address = userMarker.position;
         //check to make sure the place isnt blank.
         if (address == '') {
             window.alert('You must enter an address.');
         } else {
-            hideOnly();
+            hideSearchListings();
             /*Use distance matrix service to calculate duration of routes between all markers  and the destination
             * address entered by the user. Then put all the origins into an origin matrix*/
             var origins = [];
-            for (var i = 0; i < searchmarkers.length; i++) {
+            for (var i = 0; i < 20; i++) {
                 //console.log(searchmarkers[i].position);
                 origins[i] = searchmarkers[i].position;
                 //console.log(destinations[i]);
@@ -416,8 +432,7 @@
         hideListings();
         var directionsService = new google.maps.DirectionsService;
         // Get the destination address from the user entered value.
-        var destinationAddress =
-            document.getElementById('search-within-time-text').value;
+        var destinationAddress =userMarker.position;
         // Get mode again from the user entered value.
         var mode = document.getElementById('mode').value;
         directionsService.route({
@@ -452,59 +467,68 @@
      * has already zoomed in to a area the search will be conducted within that area if not search will be
       * conducted within the maps init location*/
     function placeSearch() {
-        var placeQuery = document.getElementById('place-search-text').value;
-        infowindow = new google.maps.InfoWindow();
-        service = new google.maps.places.PlacesService(map);
-        if (zoomplace != null) {
-            service.nearbySearch({
-                location: zoomplace,
-                radius: 1000,
-                type: placeQuery
+        
+        hideSearchListings(searchmarkers);
+        var placesService = new google.maps.places.PlacesService(map);
+        var bounds = map.getBounds();
+        placesService.textSearch({
+            query: document.getElementById('place-search-text').value,
+            location:userMarker.position,
+            radius: 25,
+            
+        }, function (results, status) {
+            if (status === google.maps.places.PlacesServiceStatus.OK) {
+                createMarkersForPlaces(results);
+            }
+        });
 
-            }, callback);
-        } else {
-            service.nearbySearch({
-                location: map.center,
-                radius: 1000,
-                type: placeQuery
 
-            }, callback);
-
-        }
     }
-    // THis Function parses results from placeSearch() and calls the createMarker() function for each.
-    function callback(results, status) {
 
-        if (status === google.maps.places.PlacesServiceStatus.OK) {
-            for (var i = 0; i < results.length; i++) {
-                createMarker(results[i]);
+
+    // THis Function creates a marker for each result that comes back in placeSearch() and places on map
+
+    function createMarkersForPlaces(places) {
+        var bounds = new google.maps.LatLngBounds();
+        for (var i = 0; i < places.length; i++) {
+            var place = places[i];
+            var icon = {
+                url: place.icon,
+                size: new google.maps.Size(100, 100),
+                origin: new google.maps.Point(0, 0),
+                anchor: new google.maps.Point(17, 34),
+                scaledSize: new google.maps.Size(40, 40)
+            };
+            searchMarker = new google.maps.Marker({
+                map: map,
+                icon: icon,
+                position: place.geometry.location,
+                title: place.name,
+                id: place.place_id
+            });
+            // Create a single infowindow to be used with the place details information
+            // so that only one is open at once.
+            var placeInfoWindow = new google.maps.InfoWindow();
+            // If a marker is clicked, do a place details search on it in the next function.
+            searchMarker.addListener('click', function () {
+                if (placeInfoWindow.searchMarker == this) {
+                    console.log("This infowindow already is on this marker!");
+                } else {
+                    getPlacesDetails(this, placeInfoWindow);
+                }
+            });
+            searchmarkers.push(searchMarker);
+            if (place.geometry.viewport) {
+                // Only geocodes have viewport.
+                bounds.union(place.geometry.viewport);
+            } else {
+                bounds.extend(place.geometry.location);
             }
         }
+        map.fitBounds(bounds);
     }
-    // THis Function creates a marker for each result that comes back in placeSearch() and places on map
-    var searchMarker;
-    function createMarker(place) {
-        var icon = {
-            url: place.icon,
-            size: new google.maps.Size(35, 35),
-            origin: new google.maps.Point(0, 0),
-            anchor: new google.maps.Point(15, 34),
-            sscaledSize: new google.maps.Size(25, 25)
-        };
-        searchMarker = new google.maps.Marker({
-            map: map,
-            icon: icon,
-            position: place.geometry.location,
-            title: place.name,
-            id: place.id
-        });
 
-        google.maps.event.addListener(searchMarker, 'click', function () {
-            populateInfoWindow(this, infowindow);
-        });
-        searchmarkers.push(searchMarker);
 
-    }
 
     //This function hides all markers from place search only and refocuses map to init position
     function hideSearchMarker() {
@@ -516,13 +540,59 @@
     }
 
     function searchBoxPlaces(searchBox) {
-        hideMarkers(placeMarkers);
+        hideSearchMarker();
         var places = searchBox.getPlaces();
-        //For each place get the icon, name and location.
-        createMarkersForPlaces(places);
         if (places.length == 0) {
-            window.alert('We did not find any places matching that search');
+            window.alert('We did not find any places matching that search!');
+        } else {
+            // For each place, get the icon, name and location.
+            createMarkersForPlaces(places);
         }
+    }
+
+    function getPlacesDetails(searchMarker, infoWindow) {
+        console.log('this function runs');
+        var service = new google.maps.places.PlacesService(map);
+        service.getDetails({
+            placeId: searchMarker.id
+        }, function (place, status) {
+            if (status === google.maps.places.PlacesServiceStatus.OK) {
+                // Set the marker property on this infowindow so it isn't created again.
+                infoWindow.searchMarker = searchMarker;
+                var innerHTML = '<div>';
+                if (place.name) {
+                    innerHTML += '<strong>' + place.name + '</strong>';
+                }
+                if (place.formatted_address) {
+                    innerHTML += '<br>' + place.formatted_address;
+                }
+                if (place.formatted_phone_number) {
+                    innerHTML += place.formatted_phone_number;
+                }
+                if (place.opening_hours) {
+                    innerHTML += '<br><br><strong>Hours:</strong><br>' +
+                        place.opening_hours.weekday_text[0] + '<br>' +
+                        place.opening_hours.weekday_text[1] + '<br>' +
+                        place.opening_hours.weekday_text[2] + '<br>' +
+                        place.opening_hours.weekday_text[3] + '<br>' +
+                        place.opening_hours.weekday_text[4] + '<br>' +
+                        place.opening_hours.weekday_text[5] + '<br>' +
+                        place.opening_hours.weekday_text[6];
+                }
+                if (place.photos) {
+                    innerHTML += '<br><br><div><img src="' + place.photos[0].getUrl(
+                        { maxHeight: 100, maxWidth: 200 }) + '"></div>';
+                }
+                innerHTML += '<div>';
+                infowindow.setContent(innerHTML);
+                infowindow.open(map, searchMarker);
+                // Make sure the marker property is cleared if the infowindow is closed.
+                infowindow.addListener('closeclick', function () {
+                    infowindow.searchMarker = null;
+                });
+
+            }
+        });
     }
 
 </script>
